# ai-status-agent

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/routes/: agent_routes.py
app/application/services/: status_service.py
app/config/: settings.py
app/domain/interfaces/: chat_repository.py  document_repository.py  ticket_repository.py
app/domain/models/: project_status.py
app/infrastructure/agents/: memory.py  status_agent.py  tracing.py
app/infrastructure/agents/tools/: chat_search_tool.py  doc_search_tool.py  ticket_search_tool.py
app/infrastructure/rag/embeddings/: cache.py  embedding_provider.py
app/infrastructure/rag/ingestion/: chunker.py  loader.py  pipeline.py
app/infrastructure/rag/retrieval/: reranker.py  retriever.py
app/infrastructure/rag/vector_store/: chroma_store.py
app/infrastructure/repositories/: chat_repo_file.py  docs_repo_file.py  ticket_repo_file.py
data/: tickets.json
